k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: huyperfume
  labels:
    app: huyperfume
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: huyperfume-frontend
  template:
    metadata:
      labels:
        app: huyperfume-frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/huybuyhuyhuy/huyperfume-frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 2
